# chains-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  chains.db-shm  chains.db-wal  chains.sqlite-shm  chains.sqlite-wal  db.sqlite  docker-compose.yml
db/: Cargo.toml  Dockerfile
db/src/: channel.rs  guild.rs  lib.rs  member.rs  warn.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_channel_table.rs  m20220101_000001_create_guild_table.rs  m20220101_000002_create_channel_table.rs  m20220101_000003_create_member_table.rs  m20220101_000004_create_warn_table.rs
src/: .main.rs.~undo-tree~  main.rs
src/commands/: .mirror.rs.~undo-tree~  disclaimer.rs  log.rs  mirror.rs  mod.rs  mod_role.rs  ping.rs  setloggingchannel.rs  snapshot.rs  snapshot_channel.rs  watch.rs  watch_channel.rs
src/commands/mirror_command/: events.rs  mod.rs
src/db/: mod.rs  model.rs
src/events/: client.rs  guild.rs  message.rs  mod.rs
src/utilities/: mod.rs  permission_utilities.rs
