[package]
name = "Chains_Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.2"
dotenv = "0.15.0"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]

