[package]
name = "chains_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.2"
dotenv = "0.15.0"
fallible-iterator ="0.2.0"

[workspace]
members = [".", "./db", "./migration"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "collector"]
version = "0.10.10"


[dependencies.db]
path = './db'